# ui-optimizer

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
contributing/diagram-comparison/: index.html
contributing/diagram-style-guide/: index.html
contributing/kroki-setup/: index.html
demo/: index.html
demo/assets/: index-C9M41EaR.js  index-CYeJn0Gl.css
docs/: README.md
docs/contributing/: diagram-comparison.md  diagram-style-guide.md  kroki-setup.md
docs/product-design/: README.md
docs/workflow/: README.md  (+3 more)
product-design/: index.html
search/: search_index.json
ui-design/: index.html
ui-design-demo/: README.md  index.html  inspect.ts  package.json  playwright.config.ts  vite.config.ts
vlm-ui-eval/: pyproject.toml  run_eval.py
vlm-ui-eval/results/: benchmark_20260118_211605.json  benchmark_20260118_211641.json  benchmark_20260118_211653.json  benchmark_20260118_211709.json  benchmark_20260118_211746.json  benchmark_20260118_211925.json  benchmark_20260118_212318.json  benchmark_20260118_213337.json  benchmark_20260118_213557.json  benchmark_20260118_213649.json  benchmark_20260118_213852.json  benchmark_20260118_214655.json  benchmark_20260118_214943.json  benchmark_20260118_215537.json  benchmark_20260118_215715.json  benchmark_20260118_220603.json  benchmark_20260118_220750.json  report.html
vlm-ui-eval/src/: html_report.py  runner.py  types.py
vlm-ui-eval/src/evaluators/: __init__.py  base.py  mobilevlm.py  qwen_vl.py  smolvlm.py  uiclip.py
workflow/: index.html
(+98 files in other folders)
